sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: ';' expected but ',' found.
    if (ecart>1){ecart= ecart/1,3}
                               ^